--- a/index.html
+++ b/index.html
@@ -129,13 +129,6 @@
           </div>
           <div class="col-lg-4 me-auto"><p class="lead">The daughter of Demeter, the Goddess of nature. The myth of Hades and Persephone is one more myth of love and abduction in the Greek mythology.</p></div>
         </div>
-        <!-- About Section Button-->
-        <!-- <div class="text-center mt-4">
-          <a class="btn btn-xl btn-outline-light" href="https://instagram.com/adiirmd">
-            <i class="fa-brands fa-instagram me-2"></i>
-            Follow Us!
-          </a>
-        </div> -->
       </div>
     </section>
     <!-- Contact Section-->
@@ -195,14 +188,6 @@
               Jakarta Selatan 12230
             </p>
           </div>
-          <!-- Footer Social Icons-->
-          <!-- <div class="col-lg-4 mb-5 mb-lg-0">
-            <h4 class="text-uppercase mb-4">Around the Web</h4>
-            <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-facebook-f"></i></a>
-            <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-twitter"></i></a>
-            <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-linkedin-in"></i></a>
-            <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-dribbble"></i></a>
-          </div> -->
           <!-- Footer About Text-->
           <div class="col-lg-6">
             <h4 class="text-uppercase mb-4">About Us</h4>
@@ -236,11 +221,14 @@
                   <!-- Portfolio Modal - Image-->
                   <img class="img-fluid rounded mb-5" src="assets/img/portfolio/1.jpg" alt="..." />
                   <!-- Portfolio Modal - Text-->
-                  <p class="mb-4">Get up, arise, and take back what you have lost, especially since God and His angels are still out to get you, or be forever doomed.</p>
-                  <button class="btn btn-dark" data-bs-dismiss="modal">
-                    <i class="fas fa-xmark fa-fw"></i>
-                    Close Window
-                  </button>
+                  <p class="mb-3">Get up, arise, and take back what you have lost, especially since God and His angels are still out to get you, or be forever doomed.</p>
+                  <strong class="mb-4"><p class="harga">IDR 80K</p></strong>
+                  <a href="https://wa.me/6281317247057?text=I%27m%20interested%20in%20your%20product%20for%20sale" target="_blank">
+                    <button class="btn btn-dark">
+                      <i class="fa-solid fa-cart-shopping"></i>
+                      Order Now
+                    </button>
+                  </a>
                 </div>
               </div>
             </div>
@@ -269,10 +257,13 @@
                   <img class="img-fluid rounded mb-5" src="assets/img/portfolio/2.jpg" alt="..." />
                   <!-- Portfolio Modal - Text-->
                   <p class="mb-4">If you want to keep growing as a person then you'll need to “Feel the Excitement... And Do it Anyway!"</p>
-                  <button class="btn btn-dark" data-bs-dismiss="modal">
-                    <i class="fas fa-xmark fa-fw"></i>
-                    Close Window
-                  </button>
+                  <strong class="mb-4"><p class="harga">IDR 200K</p></strong>
+                  <a href="https://wa.me/6281317247057?text=I%27m%20interested%20in%20your%20product%20for%20sale" target="_blank">
+                    <button class="btn btn-dark">
+                      <i class="fa-solid fa-cart-shopping"></i>
+                      Order Now
+                    </button>
+                  </a>
                 </div>
               </div>
             </div>
@@ -301,10 +292,13 @@
                   <img class="img-fluid rounded mb-5" src="assets/img/portfolio/3.jpg" alt="..." />
                   <!-- Portfolio Modal - Text-->
                   <p class="mb-4">So many creations God out there especially human who only cries and regrets his actions them in the past without showing any effort to fix it for the future.</p>
-                  <button class="btn btn-dark" data-bs-dismiss="modal">
-                    <i class="fas fa-xmark fa-fw"></i>
-                    Close Window
-                  </button>
+                  <strong class="mb-4"><p class="harga">IDR 150K</p></strong>
+                  <a href="https://wa.me/6281317247057?text=I%27m%20interested%20in%20your%20product%20for%20sale" target="_blank">
+                    <button class="btn btn-dark">
+                      <i class="fa-solid fa-cart-shopping"></i>
+                      Order Now
+                    </button>
+                  </a>
                 </div>
               </div>
             </div>
@@ -333,10 +327,13 @@
                   <img class="img-fluid rounded mb-5" src="assets/img/portfolio/4.jpg" alt="..." />
                   <!-- Portfolio Modal - Text-->
                   <p class="mb-4">Alcohol may be man's worst enemy, but the bible says love your enemy.</p>
-                  <button class="btn btn-dark" data-bs-dismiss="modal">
-                    <i class="fas fa-xmark fa-fw"></i>
-                    Close Window
-                  </button>
+                  <strong class="mb-4"><p class="harga">IDR 150K</p></strong>
+                  <a href="https://wa.me/6281317247057?text=I%27m%20interested%20in%20your%20product%20for%20sale" target="_blank">
+                    <button class="btn btn-dark">
+                      <i class="fa-solid fa-cart-shopping"></i>
+                      Order Now
+                    </button>
+                  </a>
                 </div>
               </div>
             </div>
