--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <section class="page-section bg-primary text-white mb-0" id="about">
       <div class="container">
         <!-- About Section Heading-->
-        <h2 class="page-section-heading text-center text-uppercase text-white">About</h2>
+        <h2 class="page-section-heading text-center text-uppercase text-white mt-50">About</h2>
         <!-- Icon Divider-->
         <div class="divider-custom divider-light">
           <div class="divider-custom-line"></div>
@@ -151,19 +151,19 @@
             <form name="contact-form" onsubmit="sendEmail(); reset(); return false;">
               <div class="mb-3">
                 <label for="name" class="form-label">Your Name</label>
-                <input type="text" class="form-control" id="name" aria-describedby="name" name="nama" required />
+                <input type="text" class="form-control" id="name" aria-describedby="name" placeholder="Your Name" name="nama" required />
               </div>
               <div class="mb-3">
                 <label for="email" class="form-label">Email address</label>
-                <input type="email" class="form-control" id="email" aria-describedby="email" name="email" required />
+                <input type="email" class="form-control" id="email" aria-describedby="email" placeholder="example@yourdomain.com" name="email" required />
               </div>
               <div class="mb-3">
-                <label for="phone" class="form-label">Phone Number</label>
-                <input type="phone" class="form-control" id="email" aria-describedby="phone" name="nomor" required />
+                <label for="number" class="form-label">Phone Number</label>
+                <input type="number" class="form-control" id="number" placeholder="089123456789" aria-describedby="number" name="nomor" min="0" max="14" required />
               </div>
               <div class="mb-3">
                 <label for="message" class="form-label">Message</label>
-                <textarea class="form-control" id="message" rows="3" name="pesan" required></textarea>
+                <textarea class="form-control" id="message" rows="3" name="pesan" placeholder="Write Your Message Here !!" required></textarea>
               </div>
               <button type="submit" class="btn-style btn-kirim mt-2">Send</button>
               <button class="btn btn-style btn-loading d-none" type="button" disabled>
@@ -345,32 +345,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
     <script src="js/scripts.js"></script>
-    <!-- Contact form js -->
-    <script>
-      const scriptURL = "https://script.google.com/macros/s/AKfycbxsCrAiGn99zgKfAdcKP4jF8QdTsPB81g-burx6mwndLD8oXZzBwgT1cLoIdbO4HWtX/exec";
-      const form = document.forms["contact-form"];
-      const btnKirim = document.querySelector(".btn-kirim");
-      const btnLoading = document.querySelector(".btn-loading");
-      const myAlert = document.querySelector(".my-alert");
-
-      form.addEventListener("submit", (e) => {
-        e.preventDefault();
-        //submit button
-        btnLoading.classList.toggle("d-none");
-        btnKirim.classList.toggle("d-none");
-
-        fetch(scriptURL, { method: "POST", body: new FormData(form) })
-          .then((response) => {
-            btnLoading.classList.toggle("d-none");
-            btnKirim.classList.toggle("d-none");
-            //alert
-            myAlert.classList.toggle("d-none");
-            console.log("Success!", response);
-          })
-          .catch((error) => console.error("Error!", error.message));
-        //form reset
-        form.reset();
-      });
-    </script>
   </body>
 </html>
